# mooc-manus-learning

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.dynamic-sandbox.yml  docker-compose.yml  pyproject.toml  teacher_project_analysis.md
api/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  config.example.yaml  dev.sh  pyproject.toml  pytest.ini  run.sh
api/alembic/: env.py
api/alembic/versions/: 0e0d242438bc_create_files_table.py  2761d7b50203_新增一个email字段.py  747364b8505b_.py  87ed1cbb1088_create_sessions_table.py
api/app/: main.py
api/app/application/errors/: __init__.py  exceptions.py
api/app/application/services/: agent_service.py  app_config_service.py  file_service.py  session_service.py  status_service.py
api/app/domain/models/: __init__.py  app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  session.py  tool_result.py
api/app/domain/repositories/: __init__.py  app_config_repository.py  file_repository.py  session_repository.py  uow.py
api/app/domain/services/: agent_task_runner.py
api/app/infrastructure/: __init__.py
api/app/infrastructure/logging/: __init__.py  logging.py
api/app/infrastructure/models/: __init__.py  base.py  demo.py  file.py  session.py
api/app/infrastructure/repositories/: __init__.py  db_file_repository.py  db_session_repository.py  db_uow.py  file_app_config_repository.py
api/app/infrastructure/storage/: __init__.py  cos.py  postgres.py  redis.py
api/app/interfaces/: service_dependencies.py
api/app/interfaces/endpoints/: app_config_routes.py  file_routes.py  routes.py  session_routes.py  status_routes.py
api/app/interfaces/errors/: exception_handlers.py
api/app/interfaces/middleware/: __init__.py
api/app/interfaces/schemas/: __init__.py  app_config.py  base.py  event.py  session.py
api/core/: __init__.py  config.py
api/tests/: __init__.py  conftest.py
api/tests/app/application/: test_app_config_service.py  test_lifecycle_safety.py  test_status_service.py
api/tests/app/interfaces/: __init__.py
app/: main.py
sandbox/: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  supervisord.conf
sandbox/.devops/: Dockerfile  docker-compose.yml
sandbox/app/: main.py
sandbox/app/core/: __init__.py  config.py  middleware.py
sandbox/app/interfaces/: service_dependencies.py
sandbox/app/interfaces/endpoints/: __init__.py  file.py  routes.py  shell.py  supervisor.py
sandbox/app/interfaces/errors/: __init__.py  exception_handler.py  exceptions.py
sandbox/app/interfaces/schemas/: __init__.py  base.py  file.py  shell.py  supervisor.py
sandbox/app/models/: file.py  shell.py  supervisor.py
sandbox/app/services/: file.py  shell.py  supervisor.py
sandbox/tests/: test_shell_service.py
(+141 files in other folders)
