[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "cos-python-sdk-v5>=1.9.44",
    "fastapi>=0.138.1",
    "field>=0.2.0",
    "filelock>=3.29.4",
    "httpx>=0.28.1",
    "json-repair>=0.61.1",
    "logging>=0.4.9.6",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
