[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for the MoocManus learning Agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "cos-python-sdk-v5>=1.9.38",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "filelock>=3.20.0",
    "httpx>=0.28.1",
    "json-repair>=0.53.0",
    "markdownify>=1.2.2",
    "mcp>=1.22.0",
    "openai>=1.107.2",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.3",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
